fix: no survey cards message alignment

--- a/client/src/components/SurveyCards/SurveyCards.css
+++ b/client/src/components/SurveyCards/SurveyCards.css
@@ -1,6 +1,9 @@
 /* Prefix styles with .survey- to prevent conflicts */
 .survey-list-container {
   width: 100%;
+  padding: 50px 0;
+  display: flex;
+  justify-content: center;
 }
 
 /* General styling for the survey card container */
@@ -100,7 +103,7 @@
 }
 
 .no-survey-message-container {
-  width: 80vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
